--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,3 +1,13 @@
 .input {
-
+    background: #fcfcfc;
+    border: 2px solid #e7e7e7;
+    margin: 20px auto;
+    padding: 15px;
+    width: 100%;
+    display: block;
+    border-radius: 3px;
+    font-size: 18px;
+    transition: opacity 0.4s;
+    text-align: left;
+    height: 50px;
 }
